# quiz-cli

./: Cargo.toml
migrations/2023-06-26-162831_create_questions/: down.sql  up.sql
migrations/2023-06-26-162942_create_answers/: down.sql  up.sql
src/: controller.rs  error.rs  init_db.rs  interact.rs  lib.rs  main.rs  schema.rs  view.rs
src/models/: answer.rs  error.rs  mod.rs  question.rs
