[package]
name = "quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
boolinator = "2.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.3", features = ["cargo"] }
console = "0.15.7"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
diesel = { version = "2.1.0", features = ["sqlite", "uuid", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
tabled = { version = "0.12.2", features = ["color"] }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
xdg = "2.5.0"
